--- a/index.html
+++ b/index.html
@@ -163,7 +163,7 @@
                     <h3>Sharing my Passion</h3>
                     <p>
                         "I love music passionately. And because I love it I try to free it from barren traditions that stifle it." 
-                                                                                                                    - Claude Debussy
+                                                                                                                    - Claude Debussy.
 Music is something that everyone is capable of.  I am a strong believer that everyone should be able to have a life of music. I become a piano teacher because I want to share my passion of music to as many people as I can.   If you are a beginner that needs gudiance to start your journey of art, come to us and explore music together!
                     </p>
                 </div>
@@ -184,7 +184,7 @@ Music is something that everyone is capable of.  I am a strong believer that eve
                     <div class="col-md-3">
                         <ul class="plan">
                             <li class="plan-head c-b">Beginner Class</li>
-                            <li class="main-price"><h5>This beginner level class is perfect for first-time musicians. Students will learn the basics of instrument and musical theory.</h5></li>
+                            <li class="main-price"><h5>This beginner level class is perfect for first-time musicians. Students will learn the basics of piano and musical theory.</h5></li>
                             <li><strong>30 Minutes</strong></li>
                             <li><strong>$20/Half Hour</strong></li>
 <!--                            <li><strong>50 GB</strong> Space</li>
@@ -274,7 +274,7 @@ Music is something that everyone is capable of.  I am a strong believer that eve
                             <i class="fa fa-desktop fa-5x faa-vertical animated"></i>
                             <h4>Sure Quique Menu </h4>
                             <p>
-                                Sure Quique Menu
+                                Clean Environment, with Covid-19 Guidelines
                             </p>
                         </div>
                     </div>
@@ -292,7 +292,7 @@ Music is something that everyone is capable of.  I am a strong believer that eve
                             <i class="fa fa-plus fa-5x faa-float animated"></i>
                             <h4>Well Documented </h4>
                             <p>
-                                Well Documented
+                                Beginner-Friendly
                             </p>
                         </div>
                     </div>
@@ -301,7 +301,7 @@ Music is something that everyone is capable of.  I am a strong believer that eve
                             <i class="fa fa-credit-card fa-5x faa-shake animated"></i>
                             <h4>Clean & Customizable </h4>
                             <p>
-                                Clean & Customizable
+                                Customizable
                             </p>
                         </div>
                     </div>
