--- a/index.html
+++ b/index.html
@@ -257,7 +257,7 @@ Music is something that everyone is capable of.  I am a strong believer that eve
                 <div class="row text-center">
                     <div class="col-md-8 col-md-offset-2 ">
                         <h4>
-                            <strong>I have been playing piano for more than 10 years, both professionally and recreationally.  I am currently pursuing the level of ARCT from RCM music. I am really passionate about piano and teaching, and would love to have you as my next student! I am offering both online and physical lessons, whichever is most convient for you!
+                            <strong>I have been playing piano for more than 10 years, both professionally and recreationally.  I am currently pursuing the level of ARCT from Royal Conservatory of Music Program. I am really passionate about piano and teaching, and would love to have you as my next student! I am offering both online and physical lessons, whichever is most convenient for you!
                             </strong>
                         </h4>
                     </div>
@@ -301,7 +301,7 @@ Music is something that everyone is capable of.  I am a strong believer that eve
                             <i class="fa fa-credit-card fa-5x faa-shake animated"></i>
                             <h4>Clean & Customizable </h4>
                             <p>
-                                Customizable
+                                Flexible Schedule
                             </p>
                         </div>
                     </div>
