--- a/index.html
+++ b/index.html
@@ -272,9 +272,9 @@ Music is something that everyone is capable of.  I am a strong believer that eve
                     <div class="col-md-3 ">
                         <div class="service-div">
                             <i class="fa fa-desktop fa-5x faa-vertical animated"></i>
-                            <h4>Sure Quique Menu </h4>
+                            <h4>Clean Environment </h4>
                             <p>
-                                Clean Environment, with Covid-19 Guidelines
+                                Strict Covid-19 Guidelines to ensure your health 
                             </p>
                         </div>
                     </div>
@@ -290,18 +290,18 @@ Music is something that everyone is capable of.  I am a strong believer that eve
                     <div class="col-md-3 ">
                         <div class="service-div">
                             <i class="fa fa-plus fa-5x faa-float animated"></i>
-                            <h4>Well Documented </h4>
+                            <h4>Beginner-Friendly </h4>
                             <p>
-                                Beginner-Friendly
+                                With lots of practices together, I guarantee successful results.
                             </p>
                         </div>
                     </div>
                     <div class="col-md-3 ">
                         <div class="service-div">
                             <i class="fa fa-credit-card fa-5x faa-shake animated"></i>
-                            <h4>Clean & Customizable </h4>
+                            <h4>Customizable </h4>
                             <p>
-                                Flexible Schedule
+                                Flexible Schedule to suit your needs!
                             </p>
                         </div>
                     </div>
