--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 -->
 <html>
 	<head>
-		<title>J Piano Studio</title>
+		<title>Janice Piano Studio</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 		<link rel="stylesheet" href="static/assets/css/main.css" />
@@ -16,7 +16,7 @@
 
 		<!-- Header -->
 			<header id="header">
-				<h1>J Piano Studio</h1>
+				<h1>Janice Piano Studio</h1>
 				<nav>
 					<ul>
 						<li><a href="#intro">Intro</a></li>
